--- a/sports-meeting-fe/package.json
+++ b/sports-meeting-fe/package.json
@@ -11,6 +11,7 @@
     "@ant-design/icons": "^4.6.2",
     "@ant-design/icons-vue": "^6.0.1",
     "ant-design-vue": "^2.1.2",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
