--- a/sports-meeting-be/package.json
+++ b/sports-meeting-be/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@koa/cors": "^3.1.0",
     "@koa/router": "^10.0.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.1",
     "koa-body": "^4.2.0",
     "mongoose": "^5.12.3"
